fix navbar layout on mobile

--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -2,6 +2,11 @@
   height: 50px;
   border: 1px solid #eee;
 }
+.navbar-text {
+  float: left;
+  margin-right: 15px;
+  margin-left: 15px;
+}
 
 video {
   width: 100%;
